--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@
 h1 {
   color: blue;
   font-size: 30px;
+  font-family: Georgia, serif;
+  text-decoration: blue underline;
 }
 
 ul {
@@ -30,9 +32,12 @@ img {
   margin-left: auto;
   margin-right: auto;
 }
-
+img.profile-photo {
+  border: 1px solid blue;
+}
 body {
   font-family: sans-serif;
+  text-align: center;
 }
 
 h3 {
@@ -52,9 +57,22 @@ html {
 p {
   padding-top: 20px;
   padding-bottom: 20px;
+  font-family: Helvetica, sans-serif;
 }
 
 h2,
 h3 {
   font-size: 20px;
+  font-family: Georgia, serif;
+  text-decoration: blue underline;
+}
+
+h2.skills-header {
+  color: rebeccapurple;
+}
+a {
+  color: red;
+}
+.languages-list {
+  list-style-image: url("./assets/globe.png");
 }
