--- a/styles.css
+++ b/styles.css
@@ -1,73 +1,25 @@
 /* Write your CSS below. */
 
 /* Do not change any CSS below this line. */
-h1 {
-  color: blue;
-  font-size: 30px;
-  font-family: Georgia, serif;
-  text-decoration: blue underline;
-}
-
-ul {
-  list-style-type: none;
-}
-
-ol {
-  font-weight: bold;
-}
-
-li {
-  text-align: center;
-  border: 1px solid red;
-  border-radius: 10px;
-  color: blue;
-  background-color: lightpink;
-  padding-left: 30px;
-}
-
-img {
-  width: auto;
-  height: 200px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-img.profile-photo {
-  border: 1px solid blue;
-}
-body {
-  font-family: sans-serif;
-  text-align: center;
-}
-
-h3 {
-  text-decoration-line: underline;
-}
-
-html {
-  background-color: rgb(159, 193, 201);
-  background: radial-gradient(
-    circle,
-    rgba(159, 193, 201, 1) 9%,
-    rgba(224, 209, 221, 1) 52%,
-    rgba(0, 212, 255, 1) 100%
-  );
-}
 
 p {
-  padding-top: 20px;
-  padding-bottom: 20px;
   font-family: Helvetica, sans-serif;
 }
 
+h1,
 h2,
 h3 {
-  font-size: 20px;
   font-family: Georgia, serif;
-  text-decoration: blue underline;
+  font-weight: bold;
+  text-decoration: underline blue;
 }
-
-h2.skills-header {
+.profile-photo {
+  border: 1px solid blue;
+}
+body {
+  text-align: center;
+}
+.skills-header {
   color: rebeccapurple;
 }
 a {
